Refactor database schema management and improve AdEvent processing: - Updated aggregated_campaign_stats table definition to include primary key and unique constraints. - Enhanced database initialization logic in AdEventSparkStreamer to check and create the table if it doesn't exist. - Improved error handling and logging during schema checks and view management. - Adjusted AdEvent model to implement Serializable and updated field types for better compatibility.