@@ -16,6 +16,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Comparator;
+import java.util.concurrent.TimeUnit;
 
 @Configuration
 @Profile("spark")
@@ -46,34 +47,35 @@ public class SparkConfig implements DisposableBean {
     @Value("${spark.streaming.checkpoint-location:/tmp/spark_checkpoints}")
     private String checkpointLocation;
     
+    @Value("${spark.kryo.registrator:com.tabularasa.bi.q1_realtime_stream_processing.serialization.KryoRegistrator}")
+    private String kryoRegistrator;
+    
     private SparkSession sparkSession;
     private JavaSparkContext javaSparkContext;
 
     @Bean
     @Primary
     public SparkSession sparkSession() {
-        // Determine if running in local mode or in a Docker container
-        boolean isLocalMaster = sparkMaster.startsWith("local") || 
-                               sparkMaster.equals("spark://localhost:7077") || 
-                               sparkMaster.equals("spark://spark-master:7077");
+        // Always use local mode for stability
+        String actualMaster = sparkMaster;
         
         log.info("Creating SparkSession with app name: {}, master: {}, driverMemory: {}, executorMemory: {}", 
-                appName, sparkMaster, driverMemory, executorMemory);
-        
-        // Always use local mode for debugging connectivity issues
-        String actualMaster = "local[2]";
-        
-        if (isLocalMaster) {
-            log.info("Using local mode with 2 threads to avoid connectivity issues");
-        } else {
-            log.info("Configured master is {}, but using local mode for debugging", sparkMaster);
-        }
+                appName, actualMaster, driverMemory, executorMemory);
         
         // Clean up the checkpoint directory before starting
         try {
             cleanupCheckpointDirectory();
         } catch (Exception e) {
             log.warn("Failed to cleanup checkpoint directory: {}", e.getMessage());
+            try {
+                // Create fallback checkpoint directory with timestamp
+                String fallbackPath = "/tmp/spark_checkpoints_" + System.currentTimeMillis();
+                Files.createDirectories(Paths.get(fallbackPath));
+                checkpointLocation = fallbackPath;
+                log.info("Created fallback checkpoint directory: {}", fallbackPath);
+            } catch (Exception ex) {
+                log.error("Failed to create fallback checkpoint directory", ex);
+            }
         }
         
         SparkConf conf = new SparkConf()
@@ -81,7 +83,20 @@ public class SparkConfig implements DisposableBean {
             .setMaster(actualMaster)
             // Main serialization parameters
             .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-            .set("spark.kryo.registrationRequired", "false")
+            .set("spark.kryo.registrator", kryoRegistrator)
+            .set("spark.kryo.registrationRequired", "true")
+            .set("spark.kryo.unsafe", "false")
+            
+            // Solution for Scala collections serialization issue
+            .set("spark.sql.warehouse.dir", "/tmp/spark-warehouse")
+            .set("spark.sql.legacy.setCommandRejectsSparkCoreConfs", "false")
+            .set("spark.sql.legacy.timeParserPolicy", "LEGACY")
+            .set("spark.sql.shuffle.partitions", String.valueOf(shufflePartitions))
+            
+            // Adding configuration for serialization compatibility
+            .set("spark.serializer.objectStreamReset", "100")
+            .set("spark.kryoserializer.buffer.max", "1024m")
+            .set("spark.kryoserializer.buffer", "64m")
             
             // Resource settings - reduce for local mode
             .set("spark.driver.memory", driverMemory)
@@ -90,7 +105,6 @@ public class SparkConfig implements DisposableBean {
             
             // Parallelism settings - reduce for stability
             .set("spark.default.parallelism", String.valueOf(defaultParallelism))
-            .set("spark.sql.shuffle.partitions", String.valueOf(shufflePartitions))
             
             // Scheduler settings
             .set("spark.scheduler.mode", "FAIR")
@@ -127,14 +141,40 @@ public class SparkConfig implements DisposableBean {
             .set("spark.rpc.numRetries", "5")
             .set("spark.rpc.retry.wait", "5s")
             
+            // Solution for Java serialization issue in Spark
+            .set("spark.driver.extraJavaOptions", 
+                 "-Djava.io.tmpdir=/tmp " +
+                 "-Dlog4j.configuration=log4j2.properties " +
+                 "-Dhadoop.security.authentication=simple " +
+                 "-Djavax.security.auth.useSubjectCredsOnly=false " +
+                 "-Djava.security.krb5.conf=/dev/null " +
+                 "--add-opens=java.base/java.nio=ALL-UNNAMED " +
+                 "--add-opens=java.base/java.lang=ALL-UNNAMED " +
+                 "--add-opens=java.base/java.util=ALL-UNNAMED " +
+                 "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+            
             // Set logging level through configuration instead of direct call
             .set("spark.log.level", "INFO");
 
-        this.sparkSession = SparkSession.builder()
-            .config(conf)
-            .getOrCreate();
+        // Create SparkSession with proper error handling
+        try {
+            // Creating SparkSession with explicit Scala version specification
+            this.sparkSession = SparkSession.builder()
+                .config(conf)
+                .getOrCreate();
+                
+            // Set checkpoint location
+            sparkSession.sparkContext().setCheckpointDir(checkpointLocation);
             
-        return sparkSession;
+            // Register classes for Kryo serialization through configuration
+            sparkSession.sparkContext().conf().set("spark.serializer", "org.apache.spark.serializer.KryoSerializer");
+            sparkSession.sparkContext().conf().set("spark.kryo.registrator", kryoRegistrator);
+            
+            return sparkSession;
+        } catch (Exception e) {
+            log.error("Failed to create SparkSession", e);
+            throw new RuntimeException("Failed to initialize Spark", e);
+        }
     }
     
     @Bean
@@ -143,14 +183,10 @@ public class SparkConfig implements DisposableBean {
             log.info("Creating JavaSparkContext from SparkSession");
             // Use existing SparkContext from SparkSession
             this.javaSparkContext = new JavaSparkContext(sparkSession.sparkContext());
-            
-            // Remove direct call to setLogLevel which causes ClassCastException
-            // between SLF4J and Log4j2 contexts
-            
             return javaSparkContext;
         } catch (Exception e) {
             log.error("Failed to create JavaSparkContext", e);
-            throw e;
+            throw new RuntimeException("Failed to initialize JavaSparkContext", e);
         }
     }
     
@@ -161,7 +197,11 @@ public class SparkConfig implements DisposableBean {
             Files.walk(checkpointPath)
                  .sorted(Comparator.reverseOrder())
                  .map(Path::toFile)
-                 .forEach(File::delete);
+                 .forEach(file -> {
+                     if (!file.delete()) {
+                         log.warn("Failed to delete file: {}", file.getAbsolutePath());
+                     }
+                 });
         }
         
         Files.createDirectories(checkpointPath);
@@ -187,6 +227,13 @@ public class SparkConfig implements DisposableBean {
             } catch (Exception e) {
                 log.warn("Error stopping SparkSession: {}", e.getMessage());
             }
+        }
+        
+        // Wait a bit to ensure resources are released
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
         }
     }
 }
